# CaffeineCosmic

./: .gitignore  Cargo.toml  Makefile  README.es.md  README.md  install.sh
assets/: README.md
build-aux/: io.github.diegoachury.CaffeineCosmic.yml
data/: io.github.diegoachury.CaffeineCosmic.desktop  io.github.diegoachury.CaffeineCosmic.metainfo.xml
docs/: DEPLOYMENT.md  LECCIONES-APRENDIDAS.md
src/: main.rs
