[package]
name = "cosmic-caffeine"
version = "0.1.0"
edition = "2021"
description = "Indicador tipo cafeína para el panel de COSMIC (Pop!_OS)"
authors = ["Diego Achury <achurycompany@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/diegoachury/CaffeineCosmic"
homepage = "https://github.com/diegoachury/CaffeineCosmic"
keywords = ["cosmic", "caffeine", "tray", "statusnotifieritem", "idle"]
categories = ["gui"]

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
zbus = "4"

[profile.release]
opt-level = "z"
lto = true
strip = true
